--- a/css/style.css
+++ b/css/style.css
@@ -1687,7 +1687,7 @@ iframe {
   flex-shrink: 0;
 }
 
-/* Product page */
+/* product page */
 .product-page .back {
   display: flex;
   width: 220px;
@@ -1721,6 +1721,7 @@ iframe {
   flex-grow: 1;
 }
 .product-page .product-image {
+  height: 405px;
   margin: 0 0 10px 0;
   border-radius: 20px;
   overflow: hidden;
@@ -1822,7 +1823,6 @@ iframe {
   display: grid;
   gap: 30px 24px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
 }
 .product-page .product-params .product-params-item__title {
   margin: 0 0 20px 0;
@@ -2794,6 +2794,33 @@ iframe {
     height: 55px;
   }
 
+  /* product page */
+  .product-page .image-wrapper {
+    width: 494px;
+  }
+  .product-page .product-image {
+    height: 250px;
+  }
+  .product-page .product-price-wrapper .product-price {
+    font-size: 38px;
+  }
+  .product-page .product-price-wrapper {
+    width: 302px;
+    padding: 25px;
+  }
+  .product-page .product-price-wrapper .product-price-btn {
+    height: 55px;
+  }
+  .product-page .product-params .product-params-subtitle {
+    font-size: 30px;
+  }
+  .product-page .product-params .product-params-item__title {
+    font-size: 18px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    font-size: 40px;
+  }
+
 }
 
 @media only screen and (max-width : 1400px) {
@@ -3181,6 +3208,45 @@ iframe {
     height: 30px;
   }
 
+  /* product page */
+  .product-page .back {
+    width: 200px;
+    padding: 12px 0;
+    border-radius: 15px;
+  }
+  .product-page .back-text {
+    font-size: 16px;
+  }
+  .product-page .image-wrapper {
+    width: 394px;
+  }
+  .product-page .product-image {
+    border-radius: 20px;
+  }
+  .product-page .product-gallery-item {
+    height: 140px;
+    border-radius: 15px;
+  }
+  .product-page .product-desciption-subtitle {
+    font-size: 30px;
+  }
+  .product-page .product-desciption {
+    font-size: 17px;
+  }
+  .product-page .product-price-wrapper {
+    width: 270px;
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .product-page .product-price-wrapper .product-price {
+    font-size: 34px;
+  }
+  .product-page .recommend-products-section {
+    margin-top: 100px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    font-size: 38px;
+  }
 
 }
 
@@ -3675,7 +3741,7 @@ iframe {
     height: 35px;
   }
 
-  /* Category page */
+  /* category page */
   .category-page .grid-container {
     grid-template-columns: 270px 1fr;
   }
@@ -3687,6 +3753,34 @@ iframe {
     font-size: 17px;
   }
 
+  /* product page */
+  .product-page .content-flex-container {
+    margin-bottom: 40px;
+    gap: 16px;
+    flex-wrap: wrap;
+  }
+  .product-page .image-wrapper {
+    width: 40%;
+  }
+  .product-page .product-content {
+    width: 56%;
+  }
+  .product-page .product-params .product-params-subtitle {
+    font-size: 26px;
+  }
+  .product-page .product-params .grid-container {
+    gap: 24px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .product-page .product-params .product-params-item__title {
+    font-size: 16px;
+  }
+  .product-page .recommend-products-section {
+    margin-top: 80px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    font-size: 34px;
+  }
 
   /* we use cookie */
   .we-use-cookie .we-use-cookie-wrapper {
@@ -4199,6 +4293,56 @@ iframe {
     font-size: 16px;
   }
 
+  /* product page */
+  .product-page .back {
+    width: 180px;
+    margin: 20px 0 30px 0;
+    padding: 8px 0;
+    border-radius: 10px;
+  }
+  .product-page .back-image {
+    width: 24px;
+  }
+  .product-page .back-text {
+    font-size: 14px;
+  }
+  .product-page .product-gallery-item {
+    height: 100px;
+    border-radius: 10px;
+  }
+  .product-page .image-wrapper {
+    width: 60%;
+  }
+  .product-page .product-content {
+    width: 100%;
+  }
+  .product-page .product-attributes {
+    margin: 0 0 20px 0;
+  }
+  .product-page .product-desciption-subtitle {
+    margin-bottom: 15px;
+    font-size: 24px;
+  }
+  .product-page .product-price-wrapper .product-price {
+    font-size: 30px;
+  }
+  .product-page .product-price-wrapper {
+    width: 250px;
+    padding: 15px;
+  }
+  .product-page .product-price-wrapper .product-price-btn {
+    height: 45px;
+  }
+  .product-page .product-price-wrapper .product-price-btn__text {
+    font-size: 16px;
+  }
+  .product-page .content-flex-container {
+    margin-bottom: 20px;
+  }
+  .product-page .product-params .product-params-subtitle {
+    font-size: 24px;
+  }
+
 
   /* to top */
   /*
@@ -4506,9 +4650,22 @@ iframe {
     margin-bottom: 20px;
   }
 
+  /* product page */
+  .product-page .recommend-products-section {
+    margin-top: 60px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    font-size: 30px;
+  }
+
   /* filter menu */
   .filter-menu {
     display: block;
+  }
+
+  /* product card */
+  .products {
+    gap: 16px;
   }
   
 
@@ -4748,6 +4905,55 @@ iframe {
     font-size: 20px;
   }
 
+  /* product page */
+  .product-page .image-wrapper {
+    width: 100%;
+  }
+  .product-page .product-image {
+    border-radius: 10px;
+  }
+  .product-page .product-price-wrapper {
+    width: 220px;
+  }
+  .product-page .product-price-wrapper .product-price {
+    font-size: 26px;
+  }
+  .product-page .product-price-wrapper .product-price-btn {
+    height: 40px;
+  }
+  .product-page .product-price-wrapper .product-price-btn__text {
+    font-size: 14px;
+  }
+  .product-page .product-price-wrapper .product-price-btn__image {
+    width: 30px;
+    height: 30px;
+  }
+  .product-page .product-desciption-subtitle {
+    font-size: 22px;
+  }
+  .product-page .product-params .product-params-subtitle {
+    font-size: 22px;
+  }
+  .product-page .product-params .grid-container {
+    gap: 16px;
+    grid-template-columns: auto;
+  }
+  .product-page .product-desciption {
+    font-size: 16px;
+  }
+  .product-page .recommend-products-section {
+    margin-top: 40px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    margin-bottom: 30px;
+    font-size: 28px;
+  }
+
+  /* product card */
+  .products {
+    gap: 10px;
+  }
+
 }
 
 @media only screen and (max-width : 480px) {
@@ -4954,6 +5160,15 @@ iframe {
   }
   .filter .clear-btn {
     margin-top: 20px;
+  }
+
+  /* product page */
+  .product-page .recommend-products-section {
+    margin-top: 30px;
+  }
+  .product-page .recommend-products-section .recommend-products-section-title {
+    margin-bottom: 20px;
+    font-size: 26px;
   }
 
 
