--- a/css/style.css
+++ b/css/style.css
@@ -241,14 +241,24 @@ iframe {
 .main-section {
   padding-top: 30px;
 }
-.main-section .main-banner-text {
-  width: 360px;
+.main-section .main-banner-wrapper {
+  position: relative;
+  padding-top: 50px;
+  border-radius: 30px;
+  overflow: hidden;
+  z-index: 1;
 }
 .main-section .main-banner {
+  position: relative;
   height: 400px;
   padding: 50px 60px;
   border-radius: 30px;
+  overflow: hidden;
   background-color: var(--blue-color);
+  z-index: 0;
+}
+.main-section .main-banner-text {
+  width: 360px;
 }
 .main-section .main-banner-title {
   font-family: 'Roboto-Medium';
@@ -257,8 +267,19 @@ iframe {
   line-height: 1.1;
 }
 .main-section .main-banner-subtitle {
+  margin-bottom: 40px;
   font-size: 28px;
   color: var(--white-color);
+}
+.main-section .main-banner-image {
+  position: absolute;
+  right: 0;
+  bottom: -10px;
+  width: 1040px;
+  z-index: 2;
+}
+.main-section .main-banner-image img {
+  width: 100%;
 }
 .main-section .catalog-btn {
   display: flex;
@@ -729,7 +750,7 @@ iframe {
 }
 */
 
-/* Events section */
+/* events section */
 .events-section .events {
   display: grid;
   gap: 24px;
@@ -2494,7 +2515,7 @@ iframe {
   margin-bottom: 30px;
 }
 .mobile-menu .menu {
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
   padding: 0;
   list-style: none;
 }
@@ -2503,31 +2524,31 @@ iframe {
   padding: 5px 0;
 }
 .mobile-menu .menu-item a {
-  font-size: 20px;
+  font-size: 18px;
   color: var(--text-color);
   text-decoration: none;
 }
 .mobile-menu .socials {
   display: flex;
-  margin: 0 0 30px 0;
-  gap: 16px;
+  margin: 0 0 20px 0;
+  gap: 10px;
 }
 .mobile-menu .socials .socials-item {
   display: flex;
-  width: 62px;
-  height: 49px;
+  width: 58px;
+  height: 35px;
   border: 1px solid var(--blue-color);
-  border-radius: 15px;
+  border-radius: 10px;
   overflow: hidden;
   align-items: center;
   justify-content: center;
 }
 .mobile-menu .socials .socials-item img {
-  height: 19px;
+  height: 15px;
 }
 .mobile-menu .address-wrapper {
   font-family: 'Roboto-SemiBold';
-  font-size: 20px;
+  font-size: 18px;
 }
 
 /* fixed bottom menu */
@@ -2540,10 +2561,10 @@ iframe {
   width: 100%;
   height: 90px;
   padding: 15px 10px;
-  border-radius: 30px 30px 0 0;
+  border-radius: 20px 20px 0 0;
   background-color: #fff;
   box-shadow: 0px 0px 20px 0px rgba(54, 54, 54, 0.20);
-  z-index: 12;
+  z-index: 10;
 }
 .fixed-bottom-menu .menu-wrapper {
   display: flex;
@@ -2660,6 +2681,12 @@ iframe {
   }
   .main-section .main-banner-subtitle {
     font-size: 26px;
+  }
+  .main-section .main-banner-wrapper {
+    padding: 0;
+  }
+  .main-section .main-banner-image {
+    width: 900px;
   }
 
   /* About section */
@@ -2888,6 +2915,9 @@ iframe {
   }
   .main-section .catalog-btn .catalog-btn__text {
     font-size: 22px;
+  }
+  .main-section .main-banner-image {
+    width: 800px;
   }
 
   /* About section */
@@ -3315,6 +3345,9 @@ iframe {
   .main-section .catalog-btn .catalog-btn__text {
     font-size: 20px;
   }
+  .main-section .main-banner-image {
+    width: 550px;
+  }
 
   /* About section */
   .about-section .about-description {
@@ -3406,6 +3439,7 @@ iframe {
   /* Callback dealer section */
   .callback-dealer-section .callback-dealer {
     padding: 40px 30px;
+    border-radius: 25px;
   }
   .callback-dealer-section .callback-dealer__description {
     margin-bottom: 40px;
@@ -3848,6 +3882,9 @@ iframe {
   .main-section .catalog-btn .catalog-btn__text {
     font-size: 18px;
   }
+  .main-section .main-banner-image {
+    width: 350px;
+  }
 
   /* About section */
   .about-section .about-description {
@@ -3876,6 +3913,7 @@ iframe {
   /* Category section Categories Home page and Catalog page */
   .category-section .categories-item {
     width: 49%;
+    border-radius: 20px;
   }
   .category-section .categories-item-wide {
     width: 100%;
@@ -3901,6 +3939,7 @@ iframe {
   /* Callback dealer section */
   .callback-dealer-section .callback-dealer {
     padding: 25px;
+    border-radius: 20px;
   }
   .callback-dealer-section .callback-dealer-image {
     display: none;
@@ -4392,6 +4431,9 @@ iframe {
   .main-section .catalog-btn .catalog-btn__text {
     font-size: 16px;
   }
+  .main-section .main-banner-image {
+    z-index: -1;
+  }
 
   /* About section */
   .about-section .grid-container {
@@ -4422,11 +4464,13 @@ iframe {
   .complex-solutions-section .solutions-item {
     width: 100%;
     height: 270px;
+    border-radius: 15px;
   }
 
   /* Callback dealer section */
   .callback-dealer-section .callback-dealer {
     padding: 25px 25px 85px 25px;
+    border-radius: 15px;
   }
   .callback-dealer-section .callback-dealer-form .form-flex-container {
     display: block;
@@ -4964,11 +5008,14 @@ iframe {
 
   .page-title,
   .section-title {
-    font-size: 32px;
+    font-size: 30px;
     line-height: 1;
   }
 
   /* Main section */
+  .main-section .main-banner {
+    border-radius: 15px;
+  }
   .main-section .main-banner-text {
     width: 100%;
   }
@@ -4991,6 +5038,7 @@ iframe {
   .category-section .categories-item {
     width: 100%;
     height: 200px;
+    border-radius: 15px;
   }
 
   /* Brands section */
@@ -5001,6 +5049,28 @@ iframe {
   /* Complex solutions section */
   .complex-solutions-section .solutions-item {
     height: 240px;
+  }
+
+  /* callback dealer section */
+  .callback-dealer-section .section-title {
+    font-size: 28px;
+  }
+  .callback-dealer-section .callback-dealer {
+    padding: 25px 15px 85px 15px;
+  }
+  .callback-dealer-section .callback-dealer-form .callback-dealer-btn {
+    left: 15px;
+    right: 15px;
+  }
+
+  /* News section Home page and News page */
+  .news-section .news-item .news-item__content {
+    border-radius: 15px;
+  }
+
+  /* events section */
+  .events-section .events-item {
+    border-radius: 15px;
   }
 
   /* footer */
@@ -5221,7 +5291,7 @@ iframe {
     padding: 20px 10px;
   }
 
-  /* Callback dealer section */
+  /* callback dealer section */
   .callback-dealer-section .callback-dealer {
     padding: 25px 15px 85px 15px;
   }
