--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ iframe {
   width: 36px;
   height: 36px;
   flex-shrink: 0;
+  transition: transform .2s;
+}
+.header .catalog-btn:hover .catalog-btn__image {
+  transform: rotate(-45deg);
 }
 .hmds .search-form {
   display: flex;
@@ -323,11 +327,13 @@ iframe {
   font-size: 48px;
   color: var(--white-color);
   line-height: 1.1;
+  display: none;
 }
 .main-section .main-banner-subtitle {
   margin-bottom: 40px;
   font-size: 28px;
   color: var(--white-color);
+  display: none;
 }
 .main-section .main-banner-image {
   position: absolute;
@@ -335,6 +341,7 @@ iframe {
   bottom: -10px;
   width: 1040px;
   z-index: 2;
+  display: none;
 }
 .main-section .main-banner-image img {
   width: 100%;
@@ -1711,7 +1718,7 @@ iframe {
   color: var(--blue-color);
 }
 .category-page .filter-menu-btn {
-  display: flex;
+  display: none;
   width: 300px;
   height: 70px;
   margin: 0 0 25px 0;
@@ -1746,7 +1753,7 @@ iframe {
 .products .products-item .products-item__image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .products .products-item .products-item__link {
   display: block;
@@ -1842,6 +1849,7 @@ iframe {
 .product-page .product-image img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
   overflow: hidden;
 }
 .product-page .product-gallery {
@@ -1850,11 +1858,11 @@ iframe {
   justify-content: space-between;
 }
 .product-page .product-gallery-item {
+  width: 48%;
   height: 160px;
   margin: 0;
   border-radius: 20px;
   overflow: hidden;
-  flex-grow: 1;
 }
 .product-page .product-gallery-item a {
   display: block;
@@ -1864,6 +1872,7 @@ iframe {
 .product-page .product-gallery-item img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
   overflow: hidden;
 }
 .product-page .product-attributes {
@@ -1939,8 +1948,11 @@ iframe {
   gap: 30px 24px;
   grid-template-columns: repeat(4, 1fr);
 }
-.product-page .product-params .product-params-item__title {
+.product-page .product-params .product-params-item {
   margin: 0 0 20px 0;
+}
+.product-page .product-params .product-params-item__title {
+  margin: 0 0 5px 0;
   font-family: 'Roboto-SemiBold';
   font-size: 20px;
 }
@@ -2226,9 +2238,67 @@ iframe {
 .footer .socials .socials-item:hover {
   background-color: var(--text-color);
 }
+
+.footer .news-subscribe .form {
+  display: block;
+  width: 280px;
+  margin-left: auto;
+}
+.footer .news-subscribe .news-subscribe-title {
+  margin: 0 0 20px 0;
+  font-size: 23px;
+  text-align: right;
+}
+.footer .news-subscribe .input-field {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: 15px 20px;
+  border: 1px solid #f2f2f2;
+  border-radius: 25px;
+  background-color: transparent;
+  font-family: inherit;
+  font-size: 16px;
+  color: var(--white-color);
+}
+.footer .news-subscribe .news-subscribe-btn {
+  display: flex;
+  width: 280px;
+  height: 50px;
+  padding: 0;
+  border: none;
+  border-radius: 30px;
+  background-color: var(--white-color);
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.footer .news-subscribe .news-subscribe-btn__text {
+  font-family: 'Roboto-Regular';
+  font-size: 18px;
+  color: var(--text-color);
+}
+.footer .news-subscribe .news-subscribe-btn__image {
+  display: block;
+  width: 36px;
+}
+.footer .news-subscribe .agreement-text .custom-checkbox + label::before {
+  width: 16px;
+  height: 16px;
+}
+.footer .news-subscribe .agreement-text {
+  margin-bottom: 20px;
+  line-height: 1.3;
+}
+.footer .news-subscribe .agreement-text span,
+.footer .news-subscribe .agreement-text a {
+  font-size: 12px;
+  color: var(--white-color);
+}
+
 .footer .footer-menu {
   display: flex;
-  margin: 0 0 20px 0;
+  margin: 0 0 40px 0;
 }
 .footer .footer-menu .menu {
   width: 17%;
@@ -2245,7 +2315,7 @@ iframe {
   color: var(--white-color);
 }
 .footer .footer-menu .address-wrapper {
-  text-align: right;
+/*  text-align: right;*/
   flex-grow: 1;
 }
 .footer .footer-menu .address-wrapper .phone,
@@ -2336,6 +2406,9 @@ iframe {
 .search-page .search-results-item__link:hover {
   color: var(--blue-color);
   text-decoration: underline;
+}
+.search-page .search-results-item__path {
+  display: block;
 }
 
 /* breadscrumbs */
@@ -2782,6 +2855,10 @@ iframe {
 .fixed-bottom-menu .favourite-menu-item .badge-counter {
   top: -5px;
   right: 5px;
+}
+
+.pswp img {
+  object-fit: contain;
 }
 
 .container {
@@ -4264,6 +4341,33 @@ iframe {
     width: 66px;
     height: 40px;
   }
+
+  .footer .news-subscribe .news-subscribe-title {
+    margin: 0 0 10px 0;
+    font-size: 20px;
+  }
+  .footer .news-subscribe .form {
+    width: 235px;
+  }
+  .footer .news-subscribe .input-field {
+    height: 45px;
+    padding: 10px 20px;
+  }
+  .footer .news-subscribe .agreement-text .custom-checkbox + label::before {
+    width: 14px;
+    height: 14px;
+  }
+  .footer .news-subscribe .news-subscribe-btn {
+    width: 235px;
+    height: 45px;
+  }
+  .footer .news-subscribe .news-subscribe-btn__text {
+    font-size: 16px;
+  }
+  .footer .news-subscribe .news-subscribe-btn__image {
+    width: 30px;
+  }
+
   .footer .footer-menu .address-wrapper .phone,
   .footer .footer-menu .address-wrapper .address {
     font-size: 20px;
@@ -4657,15 +4761,6 @@ iframe {
   .search-page .search-results-item__link {
     font-size: 16px;
   }
-
-
-  /* to top */
-  /*
-  .to-top {
-    display: none;
-  }
-  */
-
 }
 
 @media only screen and (max-width : 768px) {
@@ -4789,6 +4884,18 @@ iframe {
   .footer .socials .socials-item img {
     height: 14px;
   }
+
+  .footer .news-subscribe .news-subscribe-title {
+    font-size: 18px;
+    text-align: left;
+  }
+  .footer .news-subscribe .form {
+    margin-left: 0;
+  }
+  .footer .news-subscribe .news-subscribe-btn {
+    width: 100%;
+  }
+
   .footer .footer-menu {
     flex-wrap: wrap;
   }
@@ -4970,6 +5077,9 @@ iframe {
   /* category page */
   .category-page .subcategories {
     margin-bottom: 20px;
+  }
+  .category-page .filter-menu-btn {
+    display: flex;
   }
 
   /* product page */
@@ -5366,6 +5476,9 @@ iframe {
   /* footer */
   .footer .footer-text .required-links .link {
     width: auto;
+  }
+  .footer .news-subscribe .form {
+    width: 100%;
   }
 
   /* breadscrumbs */
